adjust admonition block for dark mode (Fixes: #1522)

--- a/assets/less/night/content/general.less
+++ b/assets/less/night/content/general.less
@@ -52,4 +52,50 @@ blockquote {
     background-color: @codeBackground;
     border: 1px solid darken(@codeBackground, 10%);
   }
+
+  &.warning {
+    background-color: #edd5a5;
+  }
+
+  &.error {
+    background-color: #e4aaac;
+  }
+
+  &.info {
+    background-color: #a4b8e8;
+  }
+
+  &.neutral {
+    background-color: #c6cddb;
+  }
+
+  h3.warning,
+  h3.error,
+  h3.info,
+  h3.neutral,
+  h4.warning,
+  h4.error,
+  h4.info,
+  h4.neutral {
+    &::before {
+      color: @white;
+    }
+
+    &.warning {
+      color: @white;
+      background-color: #7c4619;
+    }
+
+    &.error {
+      background-color: #882738;
+    }
+
+    &.info {
+      background-color: #1b176b;
+    }
+
+    &.neutral {
+      background-color: #1f2432;
+    }
+  }
 }
